--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>구글 계정 검색</title>
+  <title>수원공고 구글 계정 검색</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- CSS는 다음 단계에서 분리하거나 추가 -->
