"다시 검색하기" 버튼 추가

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       <strong>비밀번호:</strong>
       <span id="resultPw">-</span>
     </p>
+    <button id="resetBtn" type="button">다시 검색하기</button>
   </section>
 
   <!-- JS는 다음 단계에서 연결 -->
