--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- CSS는 다음 단계에서 분리하거나 추가 -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -60,5 +61,6 @@
   </section>
 
   <!-- JS는 다음 단계에서 연결 -->
+  <script src="script.js"></script>
 </body>
 </html>
